syllabus stuff compiles now